<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aeb_ros</name>
  <version>0.1.0</version>
  <description>Lidar based Automatic emergency braking node for ackermann drive vehicles.</description>
  <maintainer email="avealov@umich.edu">Andrew Ealovega</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_clang_tidy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
